--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,6 +14,15 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["app/**/*.js", "app/**/*.jsx"],
+  "include": [
+    "app/**/*.js", 
+    "app/**/*.jsx", 
+    "components/**/*.js", 
+    "components/**/*.jsx",
+    "context/**/*.js",
+    "context/**/*.jsx",
+    "lib/**/*.js",
+    "lib/**/*.jsx"
+  ],
   "exclude": ["node_modules"]
 }
